--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "gulp-install": "^1.1.0",
     "uglify-js": "^2.6.2",
     "uglifycss": "^0.0.20",
     "uglifyjs": "^2.4.10"
@@ -16,6 +17,7 @@
     "gulp-clean-css": "^2.0.7",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.1",
+    "gulp-install": "^1.1.0",
     "gulp-load-plugins": "^1.2.2",
     "gulp-plumber": "^1.1.0",
     "gulp-rev": "^7.0.0",
